refactor(analysis): 重构股票分析模块的数据结构和前端组件
- 移除AnalysisChMapper中RSI查询的冗余变量赋值
- 调整资金流信号计算的数据范围从30日扩展至40日以满足20日均换手率计算需求
- 优化大宗交易分析查询逻辑，增加逐笔明细展示并修改统计聚合方式
- 更新因子分析服务中的日期获取方法调用
- 简化回测引擎和数据更新服务中的异常声明
- 重构前端股票分析页面，统一使用ScoreDetailTab组件替代各独立的技术面、资金面等组件
- 添加评分明细数据结构扩展，支持infoOnly标记和标签颜色配置
- 修复前端K线图表数据解析兼容性问题
- 优化代码中的集合操作和字符串比较方法使用